crates/solidity/testing/snapshots/bindings_output/contracts/storage_layout_inner_constant/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected IsKeyword or OpenBrace.
   ╭─[input.sol:1:12]
   │
 1 │ ╭─▶ contract X2 layout at C2 { // should not bind to a constant defined in the contract
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (0):

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["X2" @ input.sol:1:10]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract X2 layout at C2 { // should not bind to a constant defined in the contract
   │          ─┬  
   │           ╰── ???
───╯
